# chatapp

./: .pre-commit-config.yaml  README.md  cliff.toml  deny.toml  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.js
src-tauri/: Cargo.toml
src/components/: MessageList.vue
src/router/: index.js
src/store/: index.js
