[package]
name = "chatapp"
version = "0.1.0"
description = "Chat App"
authors = ["YP"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-window-state = "2.4.0"
tracing = { version = "0.1.41", features = ["log"] }
dirs = "6.0.0"
config = "0.15.13"
arc-swap = "1.7.1"
